Proofed and editing SA 1.158-161, 163, and 172; SA 2.1-8, 123-130.

--- a/01_agama/samyukta/01/SA1_161.md
+++ b/01_agama/samyukta/01/SA1_161.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 161. Ānanda'
+title: 'The Related Discourses | 1. The Aggregates | 161 (49). Ānanda'
 type: kramdown
 base: ../../../
 previous: SA1_160.html
@@ -9,22 +9,24 @@ next: SA1_163.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 161. Ānanda
+### 161 (49). Ānanda
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed Venerable Ānanda, “Suppose a faithful prominent man or a prominent man’s son comes and asks you, ‘How do I know the arising and ceasing of things?’ How would you answer him?”
+2\. It was then that the Bhagavān addressed Venerable Ānanda, “Suppose a faithful prominent man or a prominent man’s son comes and asks you, ‘How shall I know the arising and ceasing of things?’ How would you answer him?”
 {:#p2}
 
-3\. Ānanda said to the Buddha, “Bhagavān, if some prominent man or a prominent man’s son came and asked me that, I would answer, ‘Know that form is something that arises and ceases, know that feeling … conception … volition … consciousness is something that arises and ceases.’ Bhagavān, if a prominent man or a prominent man’s son thus questions me, I would thus answer him.”
+3\. Ānanda said to the Buddha, “Bhagavān, if some prominent man or a prominent man’s son came and asked me that, I would answer, ‘Know that form is something that arises and ceases. Know that feeling … conception … volition … consciousness is something that arises and ceases.’ Bhagavān, if a prominent man or a prominent man’s son thus questions me, I would answer him in this way.”
 {:#p3}
 
-4\. The Buddha told Ānanda, “Good, good! You should thus answer him. Why is that? Form is something that arises and ceases, feeling … conception … volition … consciousness is something that arises and ceases. Knowing that form is something that arises and ceases is called knowing form. Knowing that feeling … conception … volition … consciousness is something that arises and ceases is called knowing feeling … conception … volition … consciousness.”
+4\. The Buddha told Ānanda, “Good, good! You should answer him in this way. Why is that? Form is something that arises and ceases. Feeling … conception … volition … consciousness is something that arises and ceases. Knowing that form is something that arises and ceases is called knowing form. Knowing that feeling … conception … volition … consciousness is something that arises and ceases is called knowing feeling … conception … volition … consciousness.”
 {:#p4}
 
 5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p5}
+
+---
 
 ### Notes
 
@@ -34,7 +36,7 @@ next: SA1_163.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 18 October 2022
 {: .revised}
 
 ---
