--- a/01_agama/samyukta/01/SA1_172.md
+++ b/01_agama/samyukta/01/SA1_172.md
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 172. Yamaka'
+title: 'The Related Discourses | 1. The Aggregates | 172 (104). Yamaka'
 type: kramdown
 base: ../../../
-previous: SA1_158.html
+previous: SA1_163.html
 next: ../02/index.html
 ---
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 172. Yamaka
+### 172 (104). Yamaka
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
@@ -22,12 +22,12 @@ next: ../02/index.html
 3\. There was a group of monks who overheard what he said. They went and said to that monk Yamaka, “Did you really say, ‘As I understand the Buddha’s teaching, an arhat who has ended the contaminants will no longer exist when their body breaks up and their life ends’?”
 {:#p3}
 
-He replied, “That’s true, venerables.”
+He replied, “That’s true, Venerables.”
 
 4\. The monks then said to Yamaka, “Don’t slander the Bhagavān. Slandering the Bhagavān isn’t good. The Bhagavān doesn’t say that. You should abandon this evil view.”
 {:#p4}
 
-5\. When the monks said this to him, Yamaka still held to his evil view. He said, “Venerables, only this is the truth; anything else is a falsehood.” He said this three times.
+5\. When the monks said this to him, Yamaka still held to his evil view. He said, “Venerables, only this is the truth; anything else is false.” He said this three times.
 {:#p5}
 
 6\. Unable to discipline Yamaka, the monks gave up and left. They went to Venerable Śāriputra and said to him, “Venerable, you should know that the monk Yamaka has had an evil view occur to him. He says, ‘As I understand the Bhagavān’s teaching, an arhat who has ended the contaminants will no longer exist when their body breaks up and their life ends.’ After we heard what he had said, we went and asked the monk Yamaka, ‘Did you really say that you thus know and see?’
@@ -35,7 +35,7 @@ He replied, “That’s true, venerables.”
 
 “He replied to us, ‘Venerables, that’s true. Anything else is foolish talk.’
 
-“We then said, ‘Don’t slander the Bhagavān. The Bhagavān doesn’t say that. You should abandon this evil view.’ We admonished him three times, but still he didn’t abandon this evil view, so we’ve come to you, venerable. Please, venerable, you should convince the monk Yamaka to desist from this evil view out of compassion for him!”
+“We then said, ‘Don’t slander the Bhagavān. The Bhagavān doesn’t say that. You should abandon this evil view.’ We admonished him three times, but still he didn’t abandon this evil view, so we’ve come to you, Venerable. Please, Venerable, you should convince the monk Yamaka to desist from this evil view out of compassion for him!”
 
 7\. Śāriputra said, “So it is. I will convince him to desist from this evil view.”
 {:#p7}
@@ -53,7 +53,7 @@ He replied, “That’s true, venerables.”
 
 The monk Yamaka said to Śāriputra, “That’s true, Venerable Śāriputra.”
 
-11\. Śāriputra said, “Now, I’ll ask you a question; answer me according to what you think. How is it, Yamaka? Is form permanent, or is it impermanent?”
+11\. Śāriputra said, “Now, I’ll ask you a question. Tell me what you think. How is it, Yamaka? Is form permanent, or is it impermanent?”
 {:#p11}
 
 He replied, “Venerable Śāriputra, it’s impermanent.”
@@ -63,12 +63,12 @@ He replied, “Venerable Śāriputra, it’s impermanent.”
 
 He replied, “It’s painful.”
 
-13\. Again, he asked, “If it’s impermanent and painful, it’s liable to change. Would a well-versed disciple see in form a self, what’s other than self, or either of them present in the other?”
+13\. Again, he asked, “If it’s impermanent and painful, it’s liable to change. Would a well-versed disciple see form as self, other than self, or either of them present in the other?”
 {:#p13}
 
 He replied, “No, Venerable Śāriputra.”
 
-“Feeling, conception, volition, and consciousness are likewise.”
+“*Feeling … conception … volition … consciousness are likewise.*”
 
 14\. Again, Śāriputra asked, “How is it, Yamaka? Is form the Tathāgata?”
 {:#p14}
@@ -95,7 +95,7 @@ He replied, “No, Venerable Śāriputra.”
 
 He replied, “No, Venerable Śāriputra.”
 
-19\. Again, he asked, “Does what’s not form … feeling … conception … volition … consciousness possess the Tathāgata?”
+19\. Again, he asked, “Does something other than form possess the Tathāgata? Does something other than feeling … conception … volition … consciousness possess the Tathāgata?”
 {:#p19}
 
 He replied, “No, Venerable Śāriputra.”
@@ -105,7 +105,7 @@ He replied, “No, Venerable Śāriputra.”
 
 He replied, “No, Venerable Śāriputra.”
 
-21\. Again, he asked, “Yamaka, you had said before, ‘As I understand the Bhagavān’s teaching, an arhat who has ended the contaminants won’t exist when his body breaks up and his life ends.’ Would you say that again now?”
+21\. Again, he asked, “Yamaka, you had said before, ‘As I understand the Bhagavān’s teaching, an arhat who has ended the contaminants won’t exist when his body breaks up and his life ends.’ Would you say that now?”
 {:#p21}
 
 The monk Yamaka said, “Venerable Śāriputra, I didn’t understand and was ignorant before, so I stated this evil view. After listening to the Venerable Śāriputra explain it, my misunderstanding and ignorance has been completely dispelled.”
@@ -113,9 +113,9 @@ The monk Yamaka said, “Venerable Śāriputra, I didn’t understand and was ig
 22\. Again, Śāriputra asked, “Yamaka, if again you were asked, ‘Monk, about that evil view that you stated before, what do you know and see now that you’ve entirely abandoned it?’ How would you answer?”
 {:#p22}
 
-Yamaka answered, “Venerable Śāriputra, if someone came and asked me that, I would thus answer: ‘The form of an arhat who has ended the contaminants is impermanent. Something that’s impermanent is painful, and what’s painful has become tranquil, cooled, and forever disappeared. His feeling, conception, volition, and consciousness are likewise.’ Were someone to come and ask me that, I would thus answer them.”
+Yamaka answered, “Venerable Śāriputra, if someone came and asked me that, I would answer in this way: ‘The form of an arhat who has ended the contaminants is impermanent. Something that’s impermanent is painful, and what’s painful has become tranquil, cooled, and forever disappeared. His feeling, conception, volition, and consciousness are likewise.’ Were someone to come and ask me that, I would answer them in this way.”
 
-23\. Śāriputra said, “Good, Yamaka! Good! You should thus answer them. Why is that? The form of an arhat who has ended the contaminants is impermanent. What’s impermanent is painful. If it’s impermanent and painful, it’s something that arises and ceases. Feeling, conception, volition, and consciousness are likewise.”
+23\. Śāriputra said, “Good, Yamaka! Good! You should thus answer them. Why is that? The form of an arhat who has ended the contaminants is impermanent. What’s impermanent is painful. If it’s impermanent and painful, it’s something that arises and ceases. *Feeling, conception, volition, and consciousness are likewise.*”
 {:#p23}
 
 24\. When Venerable Śāriputra explained the teaching, the monk Yamaka parted with dust and defilement, and his Dharma eye was purified.
@@ -123,16 +123,16 @@ Yamaka answered, “Venerable Śāriputra, if someone came and asked me that, I 
 
 #### The Simile of the False Friend
 
-25\. Venerable Śāriputra said to the monk Yamaka, “Now, I will relate to you an analogy, for wise people understand things with analogies. Take the example of a prominent man’s son. This prominent man’s son was quite wealthy with much property. He searched widely for servants to keep his property well-guarded.
+25\. Venerable Śāriputra said to the monk Yamaka, “Now, I will give you an analogy, for wise people understand things with analogies. Take the example of a prominent man’s son. This prominent man’s son was quite wealthy and had much property. He searched widely for servants to keep his property well-guarded.
 {:#p25}
 
-26\. “An enemy from a hostile clan made a pretense of becoming his servant to get close to him. This enemy was always watching for an opportunity while he was sleeping at night, when he got up in the morning, or when his servants were on break. He took great care with his mission, acting modest so his employer would be pleased and perceive him as he would a friend or son. The employer didn’t take care to protect himself once he trusted and didn’t doubt that enemy. His enemy then took a sharp knife and ended his life with it.
+26\. “An enemy from a hostile clan used a pretense to become his servant and get close to him. This enemy was always watching for an opportunity while he was sleeping at night, when he got up in the morning, or when his servants were on break. He took great care with his mission, acting modest so his employer would be pleased and perceive him like a friend or son. The employer didn’t take care to protect himself once he trusted and didn’t doubt that enemy. His enemy then took a sharp knife and ended his life with it.
 {:#p26}
 
-27\. “Yamaka, what do you think? Was that evil enemy the prominent man’s friend? Did he not have harmful intent from the start, always watching for an opportunity until the end, but that prominent man couldn’t realize it and harm came to him?”
+27\. “Yamaka, what do you think? Was that evil enemy the prominent man’s friend? Did he not have harmful intent from the start, always watching for an opportunity until the end, and that prominent man didn’t realize it until harm came to him?”
 {:#p27}
 
-He replied, “That’s true, venerable.”
+He replied, “That’s true, Venerable.”
 
 28\. Śāriputra said to the Yamaka, “What do you think? Had that prominent man known from the start that an enemy pretending to be a friend wanted to harm him, wouldn’t he have protected himself and not come to harm?”
 {:#p28}
@@ -145,19 +145,21 @@ He replied, “So it is, Venerable Śāriputra.”
 30\. “Yamaka, well-versed noble disciples observe that these five acquired aggregates are like illnesses, abscesses, thorns, and killers. They’re impermanent, painful, empty, not self, and don’t belong to self. Noble disciples don’t cling to or acquire them. Because they don’t acquire them, they aren’t attached to them. Because they aren’t attached to them, they themselves realize Nirvāṇa: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p30}
 
-31\. When Venerable Śāriputra gave this teaching, the monk Yamaka didn’t produce the contaminants, and his mind was liberated. After Venerable Śāriputra then gave him a teaching that was plain, instructive, illuminating, and joyous, the monk Yamaka got up from his seat and left.
+31\. When Venerable Śāriputra gave this teaching, the monk Yamaka didn’t produce the contaminants, and his mind was liberated. After Venerable Śāriputra gave him a teaching that was plain, instructive, illuminating, and joyous, the monk Yamaka got up from his seat and left.
 {:#p31}
+
+---
 
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.85](https://suttacentral.net/sn22.85){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2} *appropriate statement*. Ch. 時說. Lit. “timely statement.” It’s interesting to note that the Pali parallel uses the expression “kallaṁ … veyyākaraṇaṁ,” where kalla means “fitting;” but if the Indic term were kala, the Chinese translator could have easily understood it as “timely.” [\[back\]](#ref2)
+2. {:#n2} *appropriate statement*. Ch. 時說. Lit. “timely statement.” It’s interesting to note that the Pali parallel uses the expression “kallaṁ … veyyākaraṇaṁ,” where P. *kalla* means “fitting;” but if the Indic term were S. *kāla*, the Chinese translator could have understood it as “timely.” [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 19 October 2022
 {: .revised}
 
 ---
