--- a/01_agama/samyukta/02/SA2_1-4.md
+++ b/01_agama/samyukta/02/SA2_1-4.md
@@ -1,20 +1,20 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 1 (188). Impermanent'
+title: 'The Related Discourses | 2. The Sense Fields | 1-4 (188). Impermanent, Painful, Empty, and Not Self'
 type: kramdown
 base: ../../../
-previous: SA2_1-4.html
-next: SA2_2.html
+previous: index.html
+next: SA2_1.html
 ---
 
 # [The Related Discourses](../index.html)
 ## [2. The Sense Fields](index.html)
-### 1 (188). Impermanent
+### 1-4 (188). Impermanent, Painful, Empty, and Not Self
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You should correctly observe the eye to be impermanent. Such observation is called right view. Because it’s correctly observed, disillusionment arises. Because disillusionment arises, one parts with delight and greed. I say the mind is correctly liberated by parting with delight and greed.
+2\. It was then that the Bhagavān addressed the monks, “You should correctly observe the eye to be [1] impermanent … [2] painful … [3] empty … [4] not self. Such observation is called right view. Because it’s correctly observed, disillusionment arises. Because disillusionment arises, one parts with delight and greed. I say the mind is correctly liberated by parting with delight and greed.
 {: #p2}
 
 3\. “Thus, regarding the ear … nose … tongue … body … mind … one parts with delight and greed. Monks, I say the mind is correctly liberated by parting with delight and greed.
@@ -30,7 +30,7 @@ next: SA2_2.html
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 35.156-7](https://suttacentral.net/sn35.156){:target="_blank"} and [SĀ 1.1](../01/SA1_1.html){:target="_blank"}. The next three sūtras are variants that follow this template while substituting the other three marks (“painful,” “empty,” and “not self”) for “impermanent.” [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 35.156-7](https://suttacentral.net/sn35.156){:target="_blank"} and [SĀ 1.1-4](../01/SA1_1-4.html){:target="_blank"}. The next three sūtras are variants that follow this template while substituting the other three marks (“painful,” “empty,” and “not self”) for “impermanent.” [\[back\]](#ref1)
 
 ---
 
