--- a/01_agama/samyukta/02/SA2_127.md
+++ b/01_agama/samyukta/02/SA2_127.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 127. Samṛddhi (5)'
+title: 'The Related Discourses | 2. The Sense Fields | 127 (232). Samṛddhi (5)'
 type: kramdown
 base: ../../../
 previous: SA2_126.html
@@ -9,29 +9,31 @@ next: SA2_128.html
 
 # [The Related Discourses](../index.html)
 ## [2. The Sense Fields](index.html)
-### 127. Samṛddhi (5)
+### 127 (232). Samṛddhi (5)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression ‘the world is empty.’ What’s called the ‘the world is empty’?”
+2\. There was then a monk named Samṛddhi who went to the Buddha, bowed his head at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, there’s the expression ‘the world is empty.’ What does the ‘the world is empty’ mean?”
 {:#p2}
 
-3\. The Buddha told Samṛddhi, “The eye is empty. It’s empty of something constant … eternal … unchanging, and empty of something that belongs to self. Why is that? Its naturally like this. Whether it’s form, visual consciousness, visual contact, feelings that dependently arise from visual contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant, they are also empty. They are empty of something constant … eternal … unchanging, and empty of something that belongs to self. Why is that? They are naturally like this. The ear, nose, tongue, body, and mind are likewise. This is called ‘the world is empty’.”
+3\. The Buddha told Samṛddhi, “The eye is empty. It’s empty of something constant … eternal … unchanging … empty of something that belongs to self. Why is that? Its naturally like this. Whether it’s form, visual consciousness, visual contact, feelings that dependently arise from visual contact, or inner experiences that are painful, pleasant, or neither painful nor pleasant, they are also empty. They are empty of something constant … eternal … unchanging … empty of something that belongs to self. Why is that? They are naturally like this. *The ear, nose, tongue, body, and mind are likewise.* This is called ‘the world is empty.’”
 {:#p3}
 
-4\. [56c] After the Buddha spoke this sūtra, the monk Samṛddhi who heard what the Buddha taught rejoiced and approved.
+4\. After the Buddha spoke this sūtra, the monk Samṛddhi who heard what the Buddha taught rejoiced and approved.
 {:#p4}
+
+---
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel to [SN 35.85](https://suttacentral.net/sn35.85){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is similar to [SN 35.85](https://suttacentral.net/sn35.85){:target="_blank"}, but both the interlocutor and the definition of “empty” is different here. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 April 2021
+Last Revised: 20 October 2022
 {: .revised}
 
 ---
