--- a/01_agama/samyukta/02/SA2_128.md
+++ b/01_agama/samyukta/02/SA2_128.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 128. The World'
+title: 'The Related Discourses | 2. The Sense Fields | 128 (233). The World'
 type: kramdown
 base: ../../../
 previous: SA2_127.html
@@ -9,7 +9,7 @@ next: SA2_129.html
 
 # [The Related Discourses](../index.html)
 ## [2. The Sense Fields](index.html)
-### 128. The World
+### 128 (233). The World
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
@@ -17,30 +17,32 @@ next: SA2_129.html
 2\. It was then that the Bhagavān told the monks, “Now, I will discuss the world, the world’s formation, the world’s cessation, and the path to the world’s cessation. Listen closely, and well consider it!”
 {:#p2}
 
-3\. “What is the world? It’s the six inner sense fields. What are the six? The inner sense field of the eye … ear … nose … tongue … body, and the inner sense field of the mind.
+3\. “What is the world? It’s the six inner sense fields. What are the six? The inner sense field of the eye … ear … nose … tongue … body … the inner sense field of the mind.
 {:#p3}
 
 4\. “What is the world’s formation? It’s craving, delight, and greed for a future existence. Those things are attached to its formation.
 {:#p4}
 
-5\. “What is the world’s cessation? There’s craving, delight, and greed for a future existence. The attachment of those things to its formation is stopped without remainder. Having been abandoned, rejected, and ended, then one is free of desire, and they cease, stop, and disappear.
+5\. “What is the world’s cessation? There’s craving, delight, and greed for a future existence. The attachment of those things to its formation is stopped without remainder. Having been abandoned, rejected, and ended, then one is free of desire, and it ceases, stops, and disappears.
 {:#p5}
 
-6\. “What is the path to the world’s cessation? It’s the eightfold path, which is right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right concentration.”
+6\. “What is the path to the world’s cessation? It’s the eightfold path, which is right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right samādhi.”
 {:#p6}
 
 7\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p7}
 
+---
+
 ### Notes
 
-1. {:#n1} This sūtra is like [SN 12.44](https://suttacentral.net/sn12.44){:target="_blank"}; however, it only shares the topic and not the content of the Pali sutta. [\[back\]](#ref1)
+1. {:#n1} This sūtra is reminiscent of [SN 12.44](https://suttacentral.net/sn12.44){:target="_blank"}; however, it only shares the basic topic and not the content of the Pali sutta. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 April 2021
+Last Revised: 20 October 2022
 {: .revised}
 
 ---
