--- a/01_agama/samyukta/02/SA2_129.md
+++ b/01_agama/samyukta/02/SA2_129.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 129. The End of the World'
+title: 'The Related Discourses | 2. The Sense Fields | 129 (234). The End of the World'
 type: kramdown
 base: ../../../
 previous: SA2_128.html
@@ -9,27 +9,27 @@ next: SA2_130.html
 
 # [The Related Discourses](../index.html)
 ## [2. The Sense Fields](index.html)
-### 129. The End of the World
+### 129 (234). The End of the World
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “I don’t say that the world has an end to which I person can travel, nor do I say that there’s an ultimate end of suffering to someone who doesn’t travel to the end of the world.” After saying this, he went into his dwelling to sit in meditation.
+2\. It was then that the Bhagavān addressed the monks, “I don’t say that the world has an end to which a person can travel, nor do I say that there’s an ultimate end of suffering for someone who doesn’t travel to the end of the world.” After saying this, he went into his dwelling to sit in meditation.
 {: #p2}
 
-3\. A group of monks then discussed it after the Bhagavān was gone: “The Bhagavān only gave this brief teaching: ‘I don’t say that the world has an end to which a person can travel, nor do I say that there’s an ultimate end of suffering to someone who doesn’t travel to the end of the world.’ After saying this, he went into his dwelling to sit in meditation. We’ve yet to understand the meaning of the Bhagavān’s brief teaching. Who among the venerable ones is capable of explaining for us the meaning of the Bhagavān’s brief teaching?”
+3\. A group of monks then discussed it after the Bhagavān was gone: “The Bhagavān only gave this brief teaching: ‘I don’t say that the world has an end to which a person can travel, nor do I say that there’s an ultimate end of suffering for someone who doesn’t travel to the end of the world.’ After saying this, he went into his dwelling to sit in meditation. We’ve yet to understand the meaning of the Bhagavān’s brief teaching. Who among the Venerables is capable of explaining the meaning of the Bhagavān’s brief teaching for us?”
 {: #p3}
 
-4\. Again, they said, “There’s only Venerable Ānanda. He’s wise, has a complete memory, and always attends to the Bhagavān, right and left. The Bhagavān praises him as a well-versed religious practitioner. He’s capable of explaining for us the meaning of the Bhagavān’s brief teaching. Let’s go now to Venerable Ānanda and request that he explain it.”
+4\. Again, they said, “There’s only Venerable Ānanda. He’s wise, has a complete memory, and always attends to the Bhagavān, right and left. The Bhagavān praises him as a well-versed religious practitioner. He’s capable of explaining the meaning of the Bhagavān’s brief teaching for us. Let’s go to Venerable Ānanda and request that he explain it.”
 {: #p4}
 
 5\. That group of monks then went to Venerable Ānanda after having this discussion and sat to one side. They then asked Ānanda about the above subject.
 {: #p5}
 
-6\. It was then that Ānanda told the monks, “Listen closely, and consider it well. I will explain it for you. If the world, the world’s names, the world’s feelings, the world’s expressions, and the world’s languages are all entered, the world proliferates. Venerable ones, that’s to say that the eye enters the world, the world’s names, the world’s feelings, the world’s expressions, and the world’s languages, and the world proliferates. *The ear, nose, tongue, body, and body are likewise.*
+6\. It was then that Ānanda told the monks, “Listen closely, and consider it well. I will explain it for you. If the world, the world’s names, the world’s feelings, the world’s expressions, and the world’s languages are all entered, the world proliferates. Venerables, that’s to say that when the eye enters the world, the world’s names, the world’s feelings, the world’s expressions, and the world’s languages, the world proliferates. *The ear, nose, tongue, body, and mind are likewise.*
 {: #p6}
 
-7\. [57a] “The well-versed noble disciple truly knows the formation, cessation, enjoyment, trouble, and escape from the six sense fields. This is called the noble disciple who travels to the end of the world, knows the world, is respected by the world, and traverses the world.”
+7\. “The well-versed noble disciple truly knows the formation, cessation, enjoyment, trouble, and escape from the six sense fields. This is called the noble disciple who travels to the end of the world, knows the world, is respected by the world, and traverses the world.”
 {: #p7}
 
 8\. It was then that Venerable Ānanda restated this in verse:
@@ -50,21 +50,23 @@ Truly understood with right knowledge;\\
 Awakened wisdom penetrates the world,\\
 Which is called ‘crossing to the other side.’
 
-9\. “So it is, venerable ones! The Bhagavān only gave this brief teaching and went into his dwelling to sit in meditation. Now, I’ve discerned and explained it in detail for you.”
+9\. “So it is, Venerables! The Bhagavān only gave this brief teaching and went into his dwelling to sit in meditation. Now, I’ve discerned and explained it in detail for you.”
 {: #p9}
 
-10\. After Venerable Ānanda explained this teaching, the group of monks who heard what he taught rejoiced and approved.
+10\. After Venerable Ānanda explained this teaching, that group of monks who heard what he taught rejoiced and approved.
 {: #p10}
+
+---
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 35.116](https://suttacentral.net/sn35.116){:target="_blank"}. Ānanda’s explanation of the Buddha’s teaching differs, but the subject is the same as the Theravāda version. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 35.116](https://suttacentral.net/sn35.116){:target="_blank"}. Ānanda’s explanation of the Buddha’s teaching differs, but the subject and narrative is the same as the Theravāda version. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 25 April 2021
+Last Revised: 20 October 2022
 {: .revised}
 
 ---
