--- a/01_agama/samyukta/02/SA2_130.md
+++ b/01_agama/samyukta/02/SA2_130.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 130. Having a Teacher and a Disciple'
+title: 'The Related Discourses | 2. The Sense Fields | 130 (235). Having a Teacher and a Disciple'
 type: kramdown
 base: ../../../
 previous: SA2_129.html
@@ -9,7 +9,7 @@ next: ../03/index.html
 
 # [The Related Discourses](../index.html)
 ## [2. The Sense Fields](index.html)
-### 130. Having a Teacher and a Disciple
+### 130 (235). Having a Teacher and a Disciple
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
@@ -26,7 +26,7 @@ next: ../03/index.html
 5\. “I say he attains the merits of the religious life. Why is that? Having no teacher and no disciple living nearby, a monk establishes my religious practice. He’s able to correctly end suffering and reach the ultimate end of suffering.”
 {: #p5}
 
-6\. [57b] After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and accepted it.
+6\. After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and accepted it.
 {:#p6}
 
 ### Notes
@@ -37,7 +37,7 @@ next: ../03/index.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 25 April 2021
+Last Revised: 16 October 2022
 {: .revised}
 
 ---
