--- a/01_agama/samyukta/02/SA2_8.md
+++ b/01_agama/samyukta/02/SA2_8.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 8. Not Knowing (3)'
+title: 'The Related Discourses | 2. The Sense Fields | 8 (192). Not Knowing (3)'
 type: kramdown
 base: ../../../
 previous: SA2_7.html
@@ -9,29 +9,31 @@ next: SA2_123.html
 
 # [The Related Discourses](../index.html)
 ## [2. The Sense Fields](index.html)
-### 8. Not Knowing (3)
+### 8 (192). Not Knowing (3)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If you don’t become free of desire for the eye, the mind isn’t liberated, and it isn’t possible to correctly end suffering. If you don’t become free of desire for the ear … nose … tongue … body … mind, the mind isn’t liberated, and it isn’t possible to correctly end suffering.
+2\. It was then that the Bhagavān addressed the monks, “If someone doesn’t become free of desire for the eye, their mind isn’t liberated, and it isn’t possible for them to correctly end suffering. If they don’t become free of desire for the ear … nose … tongue … body … mind, their mind isn’t liberated, and it isn’t possible for them to correctly end suffering.
 {:#p2}
 
-3\. “Monks, if you are free of desire for the eye, the mind is liberated, and it’s possible to correctly end suffering. Being free of desire for the ear … nose … tongue … body … mind, the mind is liberated, and it’s possible to correctly end suffering.”
+3\. “Monks, if someone is free of desire for the eye, their mind is liberated, and it’s possible for them to correctly end suffering. Being free of desire for the ear … nose … tongue … body … mind, their mind is liberated, and it’s possible for them to correctly end suffering.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
 
-1. {:#n1} This sutra shares the same template with [SĀ 1.8](../01/SA1_8.html){:target="_blank"} but lacks a direct Pali equivalent. Cf. [SN 35.26](https://suttacentral.net/sn35.26){:target="_blank"}-[27](https://suttacentral.net/sn35.27){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra shares the same template as [SĀ 1.8](../01/SA1_8.html){:target="_blank"}, and it’s a simpler version of [SN 35.26](https://suttacentral.net/sn35.26){:target="_blank"}-[27](https://suttacentral.net/sn35.27){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 April 2021
+Last Revised: 19 October 2022
 {: .revised}
 
 ---
