--- a/01_agama/samyukta/01/SA1_159.md
+++ b/01_agama/samyukta/01/SA1_159.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 159. Faithful'
+title: 'The Related Discourses | 1. The Aggregates | 159 (47). Faithful'
 type: kramdown
 base: ../../../
 previous: SA1_158.html
@@ -9,19 +9,21 @@ next: SA1_160.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 159. Faithful
+### 159 (47). Faithful
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “A faithful good son should have this thought, ‘I should follow the teaching. I will often cultivate disillusionment with form … feeling … conception … volition, and often cultivate disenchantment with consciousness.’
+2\. It was then that the Bhagavān addressed the monks, “A faithful good son should have this thought, ‘I should follow the teaching. I will often cultivate disillusionment with form … feeling … conception … volition … often cultivate disillusionment with consciousness.’
 {:#p2}
 
-3\. “A faithful good son then often cultivates disenchantment with form … feeling … conception … volition, and often cultivates disillusionment with consciousness, so he becomes disillusioned with form … feeling … conception … volition, and becomes disillusioned with consciousness. After being disillusioned, he parts with desire and is liberated from them. Being liberated, he knows and sees: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.”
+3\. “A faithful good son then often cultivates disillusionment with form … feeling … conception … volition … often cultivates disillusionment with consciousness. He becomes disillusioned with form … feeling … conception … volition … becomes disillusioned with consciousness. After being disillusioned, he parts with desire for it and is liberated from it. Being liberated, he knows and sees: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
+
+---
 
 ### Notes
 
@@ -31,7 +33,7 @@ next: SA1_160.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 18 October 2022
 {: .revised}
 
 ---
