--- a/01_agama/samyukta/01/SA1_160.md
+++ b/01_agama/samyukta/01/SA1_160.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 160. Faithful (2)'
+title: 'The Related Discourses | 1. The Aggregates | 160 (48). Faithful (2)'
 type: kramdown
 base: ../../../
 previous: SA1_159.html
@@ -9,29 +9,31 @@ next: SA1_161.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 160. Faithful (2)
+### 160 (48). Faithful (2)
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\.  It was then that the Bhagavān addressed the monks, “A faithful good son who is correctly faithful, not at home, and has left home thinks to himself, ‘I should follow the teaching. I will often cultivate disillusionment with form … feeling … conception … volition, and often cultivate disillusionment with consciousness.’
+2\.  It was then that the Bhagavān addressed the monks, “A good son of correct faith who’s not at home and has left home thinks to himself, ‘I should follow the teaching. I will often cultivate disillusionment with form … feeling … conception … volition … often cultivate disillusionment with consciousness.’
 {:#p2}
 
-3\. “A faithful good son who is correctly faithful, not at home, and has left home then often cultivates disillusionment with form … feeling … conception … volition, and often cultivates disillusionment with consciousness, so he becomes disillusioned with form … feeling … conception … volition, and becomes disillusioned with consciousness. He then attains the escape from form … feeling … conception … volition, and attains the escape from consciousness. I say that he will be free from all birth, old age, illness, death, grief, sorrow, pain, and trouble.”
+3\. “A good son who is correctly faithful, not at home, and has left home then often cultivates disillusionment with form … feeling … conception … volition … often cultivates disillusionment with consciousness. He becomes disillusioned with form … feeling … conception … volition … becomes disillusioned with consciousness. He then attains the escape from form … feeling … conception … volition … attains the escape from consciousness. I say that he will be free from all birth, old age, illness, death, grief, sorrow, pain, and trouble.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [SN 22.147](https://suttacentral.net/sn22.147){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 22.146](https://suttacentral.net/sn22.146){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 June 2022
+Last Revised: 18 October 2022
 {: .revised}
 
 ---
