--- a/01_agama/samyukta/01/SA1_163.md
+++ b/01_agama/samyukta/01/SA1_163.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 163. What’s Destroyed'
+title: 'The Related Discourses | 1. The Aggregates | 163 (51). What’s Destroyed'
 type: kramdown
 base: ../../../
 previous: SA1_161.html
@@ -9,30 +9,33 @@ next: SA1_172.html
 
 # [The Related Discourses](../index.html)
 ## [1. The Aggregates](index.html)
-### 163. What’s Destroyed
+### 163 (51). What’s Destroyed
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Now, I will discuss things that are destroyed and not destroyed. Listen closely, and well consider it. I will explain this for you.
+2\. It was then that the Bhagavān addressed the monks, “Now, I will discuss things that are destroyed and not destroyed.[\[2\]](#n2){:#ref2} Listen closely, and consider it well. I will explain this for you.
 {:#p2}
 
-3\. “Monks, form is something destroyed, but the cessation and extinguishment[\[2\]](#n2){:#ref2} of that form is not something that’s destroyed. Feeling … conception … volition … consciousness is something destroyed, but the cessation and extinguishment of that consciousness is not something that’s destroyed.”
+3\. “Monks, form is something destroyed, but the cessation and extinguishment[\[3\]](#n3){:#ref3} of that form is not something that’s destroyed. Feeling … conception … volition … consciousness is something destroyed, but the cessation and extinguishment of that consciousness is not something that’s destroyed.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.32](https://suttacentral.net/sn22.32){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2}*extinguishment*. Ch. 涅槃. I believe here the Chinese is transliterating a word related to Nirvāṇa that’s an ordinary participle meaning “extinguishment.” The Pali parallel lacks this, giving two other synonyms for cessation: *nirodho vūpasamo atthaṅgamo*. [\[back\]](#ref2)
+2. {:#n2}*destroyed*. C. 壞. The Pali parallel has *pabhaṅga*, which Pali commentators interpreted as “fragile” or “brittle,” but which can mean “destroyed.” 壞 often means simply “to be destroyed,” but it has the connotation of gradual destruction, so it often means something more like “eroded” or “ruined.” In both cases, there’s a sense of destruction over time (i.e., impermanence).
+3. {:#n3}*extinguishment*. C. 涅槃. I believe here the Chinese is transliterating a verb related to nirvāṇa that’s here a participle meaning “extinguished.” The Pali parallel lacks this, giving two other synonyms for cessation: *nirodho vūpasamo atthaṅgamo*. [\[back\]](#ref3)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 18 October 2022
 {: .revised}
 
 ---
