--- a/01_agama/samyukta/02/SA2_4.md
+++ b/01_agama/samyukta/02/SA2_4.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 4. Not Self'
+title: 'The Related Discourses | 2. The Sense Fields | 4 (188). Not Self'
 type: kramdown
 base: ../../../
 previous: SA2_3.html
@@ -9,15 +9,15 @@ next: SA2_5.html
 
 # [The Related Discourses](../index.html)
 ## [2. The Sense Fields](index.html)
-### 4. Not Self
+### 4 (188). Not Self
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You should correctly observe the eye to be not self. Such observation is called right view. Because it’s correctly observed, disillusionment arises. Because disillusionment arises, one parts with delight and greed [for the eye]. I say the mind is correctly liberated because of parting with delight and greed.
+2\. It was then that the Bhagavān addressed the monks, “You should correctly observe the eye to be not self. Such observation is called right view. Because it’s correctly observed, disillusionment arises. Because disillusionment arises, one parts with delight and greed. I say the mind is correctly liberated by parting with delight and greed.
 {: #p2}
 
-3\. “Thus, regarding the ear … nose … tongue … body … mind … one parts with delight and greed [for the mind]. Monks, I say the mind is correctly liberated because of parting with delight and greed.
+3\. “Thus, regarding the ear … nose … tongue … body … mind … one parts with delight and greed. Monks, I say the mind is correctly liberated by parting with delight and greed.
 {: #p3}
 
 4\. “Someone who’s mind is correctly liberated can declare about themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
@@ -26,15 +26,17 @@ next: SA2_5.html
 5\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {: #p5}
 
+---
+
 ### Notes
 
-1. {:#n1} This sūtra is similar to [SN 35.155](https://suttacentral.net/sn35.155){:target="_blank"} and [157](https://suttacentral.net/sn35.157){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is similar to [SN 35.156-7](https://suttacentral.net/sn35.156){:target="_blank"} and [SĀ 1.4](../01/SA1_4.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 April 2021
+Last Revised: 19 October 2022
 {: .revised}
 
 ---
