--- a/01_agama/samyukta/02/SA2_6.md
+++ b/01_agama/samyukta/02/SA2_6.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 6. Not Knowing'
+title: 'The Related Discourses | 2. The Sense Fields | 6 (190). Not Knowing'
 type: kramdown
 base: ../../../
 previous: SA2_5.html
@@ -9,29 +9,31 @@ next: SA2_7.html
 
 # [The Related Discourses](../index.html)
 ## [2. The Sense Fields](index.html)
-### 6. Not Knowing
+### 6 (190). Not Knowing
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If you don’t know or understand and don’t stop or become free of desire for the eye, it’s not possible to correctly end suffering. The ear, nose, tongue, body, and mind are likewise.
+2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand the eye and doesn’t stop or become free of desire for it, it’s not possible to correctly end suffering. *The ear, nose, tongue, body, and mind are likewise.*
 {:#p2}
 
-3\. “Monks, if you know and understand and stop and become free of desire for the eye, it’s possible to correctly end suffering. If you know and understand and stop and become free of desire for the eye … nose … tongue … body … mind, it’s possible to correctly end suffering.”
+3\. “Monks, if someone knows and understands the eye and stops and becomes free of desire for it, it’s possible to correctly end suffering. If someone knows and understands the eye … nose … tongue … body … mind and stops and becomes free of desire for it, it’s possible to correctly end suffering.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
 
-1. {:#n1} This sūtra has a similar formula as [SN 35.26](https://suttacentral.net/sn35.26){:target="_blank"}-[27](https://suttacentral.net/sn35.27){:target="_blank"}. Note that the Pali parallels treat the eighteen elements as a totality, whereas this Chinese sūtra is equivalent to [SĀ 1.6](../01/SA1_6.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra has a similar formula as [SN 35.26](https://suttacentral.net/sn35.26){:target="_blank"}-[27](https://suttacentral.net/sn35.27){:target="_blank"}. Note that the Pali parallels treat the eighteen elements as a totality, whereas this sūtra is equivalent to [SĀ 1.6](../01/SA1_6.html){:target="_blank"}, applying the same template to the six sense fields. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 April 2021
+Last Revised: 19 October 2022
 {: .revised}
 
 ---
