--- a/01_agama/samyukta/02/SA2_7.md
+++ b/01_agama/samyukta/02/SA2_7.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 7. Not Knowing (2)'
+title: 'The Related Discourses | 2. The Sense Fields | 7 (191). Not Knowing (2)'
 type: kramdown
 base: ../../../
 previous: SA2_6.html
@@ -9,29 +9,31 @@ next: SA2_8.html
 
 # [The Related Discourses](../index.html)
 ## [2. The Sense Fields](index.html)
-### 7. Not Knowing (2)
+### 7 (191). Not Knowing (2)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If you don’t know and understand or stop and become free of desire for the eye, it isn’t possible to transcend the suffering of birth, old age, illness, and death. Not knowing and understanding or stopping and becoming free of desire for the ear … nose … tongue … body … mind, it isn’t possible to transcend the suffering of birth, old age, illness, and death.
+2\. It was then that the Bhagavān addressed the monks, “If someone doesn’t know and understand and doesn’t stop and become free of desire for the eye, it isn’t possible for them to transcend the suffering of birth, old age, illness, and death. Not knowing and understanding or stopping and becoming free of desire for the ear … nose … tongue … body … mind, it isn’t possible to transcend the suffering of birth, old age, illness, and death.
 {:#p2}
 
-3\. “Monks, if you know and understand and stop and become free of desire for the eye, it’s possible to transcend the suffering of birth, old age, illness, and death. If you know and understand and stop and become free of desire for the ear … nose … tongue … body … mind, it’s possible to transcending the suffering of birth, old age, illness, and death.”
+3\. “Monks, if someone knows and understands and stops and becomes free of desire for the eye, it’s possible for them to transcend the suffering of birth, old age, illness, and death. If they know and understand and stop and become free of desire for the ear … nose … tongue … body … mind, it’s possible for them to transcend the suffering of birth, old age, illness, and death.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p4}
 
+---
+
 ### Notes
 
-1. {:#n1} This sutra shares the same template with [SĀ 1.7](../01/SA1_7.html){:target="_blank"} but lacks a direct Pali equivalent. Cf. [SN 35.26](https://suttacentral.net/sn35.26){:target="_blank"}-[27](https://suttacentral.net/sn35.27){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra shares the same template as [SĀ 1.7](../01/SA1_7.html){:target="_blank"}, and it’s a simpler version of [SN 35.26](https://suttacentral.net/sn35.26){:target="_blank"}-[27](https://suttacentral.net/sn35.27){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 April 2021
+Last Revised: 19 October 2022
 {: .revised}
 
 ---
