--- a/01_agama/dirgha/DA_18.md
+++ b/01_agama/dirgha/DA_18.md
@@ -214,7 +214,7 @@ He replied, “I don’t know them.”
 2. {:#n2}*such liberation, and such halls of liberation.* Ch.如是解脫、如是解脫堂. The Pali parallel reads: *evaṁvihārī … evaṁvimuttā*. The Chinese translator consistently renders Skt. *vihāra* literally as 堂 (“meeting hall” or “temple”) throughout DĀ, despite it’s apparent figurative meaning in passages like this one. [\[back\]](#ref2)
 3. {:#n3}*Nirvāṇa.* Ch. 滅度. In his essay “Nirvāṇa Has No Name,” Sengzhao, a student of Kumārajīva, explained that this Chinese translation captures two readings of Nirvāṇa as the final cessation (滅) of suffering and the crossing over (度) of the four floods (cf. T 1858.157c2). As such, it’s difficult to translate to English as a single concept, so I’ve reverted to the Sanskrit. [\[back\]](#ref3)
 4. {:#n4}*believe the practice of right view.* Ch. 見正信行. I suspect the word order of this phrase is corrupt, that perhaps it should read 信正見行. The Pali parallel reads *sammādiṭṭhikā sammādiṭṭhikammasamādānā*, which means “holding right views and acting out right views.” [\[back\]](#ref4)
-5. {:#n5}*self-purification … “Purification Sutra.”* Ch. 自清淨 … 清淨經, P. *sampasādanīya*, Skt. *samprasīdati*(?). It would seem the Skt. equivalent of this sutra’s title was ambiguous enough to be rendered differently here by the translator. In Skt., *samprasīdati* can mean to “settle, soothe, or feel glad,” and *prasīdati* can mean to become “clear or tranquil” as well as “pleased or glad.”
+5. {:#n5}*self-purification … “Purification Sutra.”* Ch. 自清淨 … 清淨經, P. *sampasādanīya*, Skt. *samprasīdati*(?). It would seem the Skt. equivalent of this sutra’s title was ambiguous enough to be rendered differently here by the translator. In Skt., *samprasīdati* can mean to “settle, soothe, or feel glad,” and *prasīdati* can mean to become “clear or tranquil” as well as “pleased or glad.” [\[back\]](#ref5)
 
 ---
 
